HTML validator updates + cleanup

--- a/task1.html
+++ b/task1.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
+<meta charset="utf-8"/>
+<title>Task 1</title>
 <style>
 .mc1 { color : red }
 .m2 { color : orange }
@@ -67,5 +71,6 @@ td, th {
                 <td>8</td>
                 <td>256</td>
         </tr>
+</table>
 </body>
 </html>
