--- a/task3.html
+++ b/task3.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Task 3</title>
+<meta charset="utf-8"/>
 <style>
 * {
 	box-sizing: border-box;
@@ -11,24 +13,17 @@
 .options {
 	width: 33%;
 	height: 100%;
+	float: left;
+	padding: 15px;
 }
 .description {
 	width: 67%;
 	overflow-y: hidden;
 	padding: 15px;
 }
-.options {
-	float: left;
-	padding: 15px;
-}
 .content::after {
 	content: "";
-	display: table:
-}
-.list ul {
-	list-style-type: none:
-	margin: 0;
-	padding: 0;
+	display: table;
 }
 .list button {
 	padding: 8px;
@@ -40,13 +35,13 @@
 <h1 class="header">HW02 Task Three</h1>
 <div class="content">
 	<div class="options list">
-		<ul>
+		
 		<button type="button" onclick="lorem()">Lorem Ipsem</button>
 		<br>
 		<button type="button" onclick="bottles()">99 Bottles</button>
 		<br>
 		<button type="button" onclick="thing()">Last Thing</button>
-		</ul>
+		
 	</div>
 	<div class="description">
 		<p>Choose an option on the left!</p>
