--- a/task2.html
+++ b/task2.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Task 2</title>
+<meta charset="utf-8"/>
 <script>
 funcion add1() {
 	var value = document.getElementById("num").innerHTML;
